# Wyevern

./: .gitignore  .gitmodules  CMakeLists.txt  Global.cmake  Instance.cpp  Instance.hpp  JobSystem.cpp  JobSystem.hpp  Main.cpp  Module.hpp  SDLCommon.cpp  SDLCommon.hpp  Threading.cpp  Threading.hpp  Window.cpp  Window.hpp  Wyevern.cmake  meson.build
.github/workflows/: cmake-multi-platform.yml
Global/: Architecture.hpp
JobSystem/: Job.hpp  JobHandle.cpp  JobHandle.hpp  JobQueue.hpp  JobSystem.cpp  JobSystem.hpp
Renderer/: Renderer.hpp
Renderer/Vulkan/: VulkanPC.cpp  VulkanRenderer.hpp
Threading/: JobSystem.cpp  JobSystem.hpp
WyeForge/: CMakeLists.txt  WyeForge.cpp  WyeForge.hpp
WyeGen/: CMakeLists.txt  VectorSwizzles.c  WyeGen.c  WyeGen.cpp  WyeGen.h  WyeGen.hpp
WyeLoader/: CMakeLists.txt  WyeLoader.cpp
WyeMaths/: BasicTypes.hpp  CMakeLists.txt  Dummy.cpp  SwizzleGen.c  SwizzleGen.cpp  Vector.hpp  VectorArray.hpp  VectorSwizzles.c
WyeRender/: CMakeLists.txt  Renderer.hpp
Wyevern/: CMakeLists.txt  Component.hpp  EntityData.hpp  Module.hpp  Platform.hpp  WyevernApplication.hpp
Wyevern/JobSystem/: Job.hpp  JobHandle.cpp  JobHandle.hpp  JobQueue.hpp
Wyevern/SDLCommon/: CMakeLists.txt  SDLCommon.cpp  SDLCommon.hpp
Wyevern/WyeMaths/: BasicTypes.hpp  CMakeLists.txt  Vector.hpp
Wyevern/WyeRender/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  Windowing.hpp
Wyevern/WyeRender/OpenGL/: CMakeLists.txt  GLRenderer.cpp  GLRenderer.hpp
Wyevern/WyeRender/Vulkan/: CMakeLists.txt  VulkanPC.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanWindowing.hpp
